force-app/main/default/objects/Agreement_Unit_Equivalent__c/Agreement_Unit_Equivalent__c.object-meta.xml
<CustomObject>
    <description>External institution credit transfer supported units.</description>
    <label>Agreement Unit Equivalent</label>
    <nameField>
        <label>Origin Unit Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Agreement Unit Equivalents</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>