force-app/main/default/objects/Agreement_Unit_Equivalent__c/fields/Origin_Unit_Codes__c.field-meta.xml
<CustomField>
    <fullName>Origin_Unit_Codes__c</fullName>
    <description>The semi-colon separated of origin/source Unit Code from the educational institution or partner educational institution.</description>
    <label>Origin Unit Code (s)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>