force-app/main/default/objects/Agreement_Unit_Equivalent__c/fields/Review_Date__c.field-meta.xml
<CustomField>
    <fullName>Review_Date__c</fullName>
    <description>Last review date.</description>
    <label>Review Date</label>
    <type>Date</type>
</CustomField>