force-app/main/default/objects/Agreement_Unit_Equivalent__c/fields/Target_Unit_Codes__c.field-meta.xml
<CustomField>
    <fullName>Target_Unit_Codes__c</fullName>
    <description>The related one or more Unit Code that the agreement unit equivalent is applicable to separated by semi-colon, e.g., UNITA;UNITB.</description>
    <label>Target Unit Code (s)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>