force-app/main/default/objects/Agreement_Unit_Equivalent__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>Denotes the relationship between origin unit and target unit.</description>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>One to One</fullName>
                <default>true</default>
                <label>One to One</label>
            </value>
            <value>
                <fullName>One to Many</fullName>
            </value>
            <value>
                <fullName>Many to One</fullName>
            </value>
            <value>
                <fullName>Manual Assignment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>